// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mml plugin with absolute outdir path with default options: generated/absolute-outpath/default-options/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///b.html";
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
  console.log(b_default, d_default);
})();
</script > "
`;

exports[`mml plugin with absolute outdir path with default options: generated/absolute-outpath/default-options/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
})();
</script > "
`;

exports[`mml plugin with absolute outdir path with default options: generated/absolute-outpath/default-options/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with absolute outdir path with import prefix: generated/absolute-outpath/import-prefix/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "foo/b.html";
  var d_default = "foo/c/d.html";
  var c = "wat-" + d_default;
  console.log(b_default, d_default);
})();
</script > "
`;

exports[`mml plugin with absolute outdir path with import prefix: generated/absolute-outpath/import-prefix/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "foo/c/d.html";
  var c = "wat-" + d_default;
})();
</script > "
`;

exports[`mml plugin with absolute outdir path with import prefix: generated/absolute-outpath/import-prefix/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with absolute outdir path with new import and path from output processor: generated/absolute-outpath/new-import-and-path/flump/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///blump/b.html";
  var d_default = "ws:///blump/c/d.html";
  var c = "wat-" + d_default;
  console.log(b_default, d_default);
})();
</script > "
`;

exports[`mml plugin with absolute outdir path with new import and path from output processor: generated/absolute-outpath/new-import-and-path/flump/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///blump/c/d.html";
  var c = "wat-" + d_default;
})();
</script > "
`;

exports[`mml plugin with absolute outdir path with new import and path from output processor: generated/absolute-outpath/new-import-and-path/flump/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with absolute outdir path with new import from output processor: generated/absolute-outpath/new-import/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///quux/b.html";
  var d_default = "ws:///quux/c/d.html";
  var c = "wat-" + d_default;
  console.log(b_default, d_default);
})();
</script > "
`;

exports[`mml plugin with absolute outdir path with new import from output processor: generated/absolute-outpath/new-import/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///quux/c/d.html";
  var c = "wat-" + d_default;
})();
</script > "
`;

exports[`mml plugin with absolute outdir path with new import from output processor: generated/absolute-outpath/new-import/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with absolute outdir path with new path from output processor: generated/absolute-outpath/new-path/bar/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///bar/b.html";
  var d_default = "ws:///bar/c/d.html";
  var c = "wat-" + d_default;
  console.log(b_default, d_default);
})();
</script > "
`;

exports[`mml plugin with absolute outdir path with new path from output processor: generated/absolute-outpath/new-path/bar/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///bar/c/d.html";
  var c = "wat-" + d_default;
})();
</script > "
`;

exports[`mml plugin with absolute outdir path with new path from output processor: generated/absolute-outpath/new-path/bar/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with absolute outdir path world: generated/absolute-outpath/world/world.json 1`] = `
"{
  "default": {
    "id": "my-world-1",
    "name": "my-world",
    "mmlDocumentConfiguration": {
      "mmlDocuments": {
        "duck": {
          "url": "foo"
        }
      }
    }
  }
}"
`;

exports[`mml plugin with relative outdir path with default options: generated/relative-outpath/default-options/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///b.html";
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
  console.log(b_default, d_default);
})();
</script > "
`;

exports[`mml plugin with relative outdir path with default options: generated/relative-outpath/default-options/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
})();
</script > "
`;

exports[`mml plugin with relative outdir path with default options: generated/relative-outpath/default-options/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with relative outdir path with import prefix: generated/relative-outpath/import-prefix/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "foo/b.html";
  var d_default = "foo/c/d.html";
  var c = "wat-" + d_default;
  console.log(b_default, d_default);
})();
</script > "
`;

exports[`mml plugin with relative outdir path with import prefix: generated/relative-outpath/import-prefix/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "foo/c/d.html";
  var c = "wat-" + d_default;
})();
</script > "
`;

exports[`mml plugin with relative outdir path with import prefix: generated/relative-outpath/import-prefix/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with relative outdir path with new import and path from output processor: generated/relative-outpath/new-import-and-path/flump/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///blump/b.html";
  var d_default = "ws:///blump/c/d.html";
  var c = "wat-" + d_default;
  console.log(b_default, d_default);
})();
</script > "
`;

exports[`mml plugin with relative outdir path with new import and path from output processor: generated/relative-outpath/new-import-and-path/flump/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///blump/c/d.html";
  var c = "wat-" + d_default;
})();
</script > "
`;

exports[`mml plugin with relative outdir path with new import and path from output processor: generated/relative-outpath/new-import-and-path/flump/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with relative outdir path with new import from output processor: generated/relative-outpath/new-import/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///quux/b.html";
  var d_default = "ws:///quux/c/d.html";
  var c = "wat-" + d_default;
  console.log(b_default, d_default);
})();
</script > "
`;

exports[`mml plugin with relative outdir path with new import from output processor: generated/relative-outpath/new-import/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///quux/c/d.html";
  var c = "wat-" + d_default;
})();
</script > "
`;

exports[`mml plugin with relative outdir path with new import from output processor: generated/relative-outpath/new-import/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with relative outdir path with new path from output processor: generated/relative-outpath/new-path/bar/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///bar/b.html";
  var d_default = "ws:///bar/c/d.html";
  var c = "wat-" + d_default;
  console.log(b_default, d_default);
})();
</script > "
`;

exports[`mml plugin with relative outdir path with new path from output processor: generated/relative-outpath/new-path/bar/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///bar/c/d.html";
  var c = "wat-" + d_default;
})();
</script > "
`;

exports[`mml plugin with relative outdir path with new path from output processor: generated/relative-outpath/new-path/bar/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with relative outdir path world: generated/relative-outpath/world/world.json 1`] = `
"{
  "default": {
    "id": "my-world-1",
    "name": "my-world",
    "mmlDocumentConfiguration": {
      "mmlDocuments": {
        "duck": {
          "url": "foo"
        }
      }
    }
  }
}"
`;
